--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,7 @@ input {
 .page {
   width: 100%;
   background-color: var(--bg-primary);
+  padding-bottom: var(--gap-standard);
 }
 
 .App {
